--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "braintree": "^3.13.0",
     "concurrently": "^7.6.0",
